Added liquibase. Created users, roles and users_roles tables. Implemented jwt security service.

--- a/expense-tracker-server/src/main/resources/application.properties
+++ b/expense-tracker-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:postgresql://localhost:5432/expense-tracker
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -6,3 +6,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 mvc.hiddenmethod.filter.enabled=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.servlet.contextPath=/api
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+
+superuser.username=superuser
+superuser.password=superuser
+superuser.email=superuser@superuser.com
